# MilodikFX

./: .gitignore  CLAUDE.md  CMakeLists.txt  DEBUG_BLANK_PAGE.md  HONEST_UI_ASSESSMENT.md  QUICK_START.md  README.md  RELEASE_CHECKLIST.md  RELEASE_GUIDE.md  RELEASE_NOTES_v0.7.5.md  RELEASE_NOTES_v0.8.0-dev.md  RELEASE_NOTES_v0.8.0.md  RELEASE_PACKAGE_v0.8.0.md  SPRINT7_COMPLETION_SUMMARY.md  SPRINT7_EXECUTABLE_GUIDE.md  SPRINT7_FINAL_RELEASE.md  SPRINT8_STATUS.md  SPRINT_7_5_BEFORE_AFTER.md  SPRINT_7_5_EXECUTION_SUMMARY.md  SPRINT_7_5_MIGRATION_COMPLETE.md  SPRINT_7_5_README.md  SPRINT_7_COMPLETION.md  SPRINT_8_DAY_1_COMPLETION.md  SPRINT_8_DAY_2_STATUS.md  SPRINT_8_DAY_3_COMPLETION.md  SPRINT_8_ELECTRON_ARCHITECTURE.md  SPRINT_8_ELECTRON_EXECUTION_PLAN.md  SPRINT_8_EXECUTION_PLAN.md  SPRINT_8_PLANNING_BRIEF.md  TEST_AUDIT_SUMMARY.md  TEST_REPORT.md  TEST_SUMMARY.md  binding.gyp  package-lock.json  package.json  test-native-binding.js  troubleshoot.js
.github/: DELIVERABLES_SUMMARY.md  E2E_QUICK_REFERENCE.md  E2E_TESTING.md  FUNDING.yml  copilot-instructions.md  copilot-setup-steps.yml
.github/scripts/: run-e2e-tests.ps1  run-e2e-tests.sh  run-local-e2e.ps1  run-local-e2e.sh
.github/skills/conversation-workflow-packager/: SKILL.md
.github/skills/juce-electron-hybrid-audio/: SKILL.md
.github/workflows/: ci.yml
Release/: BUILD_VERIFICATION_REPORT.md  CHECKLIST.md  FINAL_SUMMARY.md
build2/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake
build2/MilodikFX.dir/Debug/: MilodikFX.exe.recipe
build2/MilodikFX_artefacts/JuceLibraryCode/: Info.txt  JuceHeader.h  MilodikFX_resources.rc
build2/MilodikFX_rc_lib.dir/Debug/: MilodikFX_rc_lib.lib  MilodikFX_rc_lib.vcxproj.FileListAbsolute.txt  MilodikFX_resources.res
build2/MilodikFX_tests.dir/Debug/: MilodikFX_tests.exe.recipe
build2/MilodikFX_tests_artefacts/JuceLibraryCode/: Info.txt  JuceHeader.h  MilodikFX_tests_resources.rc
build2/MilodikFX_tests_rc_lib.dir/Debug/: MilodikFX_tests_rc_lib.lib  MilodikFX_tests_rc_lib.vcxproj.FileListAbsolute.txt  MilodikFX_tests_resources.res
docs/: BUNDLING_STRATEGY.md  COMPREHENSIVE_AUDIT_REPORT.md  SPRINT7_PLANNING.md  SPRINT7_UI_ANALYSIS.md  SPRINT_7_ARCHITECTURE_VERIFICATION.md  SPRINT_7_COMPLETION_CHECKLIST.md  SPRINT_7_FINAL_STATUS.md  index.html  layout.md  nam-plan.md  prd.md  roadmap.md
electron/: main.js  preload.js
electron/public/: index.html
frontend/: .eslintrc.cjs  .gitignore  README.md  SPRINT_7_SUMMARY.md  TEST_SUMMARY.md  cypress.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  test-output.txt  test-results.txt  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/cypress/e2e/: app.cy.ts  app_actions.cy.ts  device-selection.cy.ts  engine.cy.ts  knob.cy.ts  main.cy.ts  parameter-control.cy.ts  preset-management.cy.ts
frontend/cypress/support/: commands.ts  e2e.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: setup.ts
frontend/src/components/: AddEffectModal.tsx  AppFooter.tsx  AudioMeter.tsx  Button.tsx  Card.tsx  ChainStrip.tsx  Dashboard.tsx  DashboardV2.tsx  DevicePanel.tsx  DeviceSettings.tsx  Dropdown.tsx  Input.tsx  (+53 more)
installer/: MilodikFX.iss
scripts/: build-release.ps1
spike/nam-bench/: CMakeLists.txt  main.cpp
src/: Main.cpp  MainComponent.cpp  MainComponent.cpp.bak  MainComponent.h
src/api/: ApiJson.h  DevicesHandler.cpp  DevicesHandler.h  EffectsHandler.cpp  EffectsHandler.h  HealthHandler.h  HistoryHandler.cpp  HistoryHandler.h  HttpHandler.h  IrHandler.cpp  IrHandler.h  LevelsHandler.cpp  LevelsHandler.h  LooperHandler.h  MidiHandler.cpp  MidiHandler.h  ModulationHandler.h  NamHandler.cpp  NamHandler.h  ParameterRegistry.cpp  ParameterRegistry.h  ParametersHandler.cpp  ParametersHandler.h  PresetsHandler.cpp  PresetsHandler.h  RestApiDispatcher.h  ScenesHandler.cpp  ScenesHandler.h  TunerHandler.cpp  TunerHandler.h  UndoHistory.cpp  UndoHistory.h  UpdateHandler.h
src/audio/: AudioDeviceController.cpp  AudioDeviceController.h  AudioEngine.cpp  AudioEngine.h
src/dsp/: AudioProcessorBase.h  Biquad.h  CabinetProcessor.cpp  CabinetProcessor.h  ChainFactory.cpp  ChainFactory.h  CompressorProcessor.cpp  CompressorProcessor.h  DSPChainManager.cpp  DSPChainManager.h  DelayProcessor.cpp  DelayProcessor.h  DriveVoicing.h  EQProcessor.cpp  EQProcessor.h  GainProcessor.cpp  GainProcessor.h  InputTrimProcessor.cpp  InputTrimProcessor.h  IrEngine.cpp  IrEngine.h  LooperProcessor.cpp  LooperProcessor.h  MasterOutProcessor.cpp  MasterOutProcessor.h  MetronomeProcessor.cpp  MetronomeProcessor.h  ModulationEngine.cpp  ModulationEngine.h  NamProcessor.cpp  NamProcessor.h  NamResampler.cpp  NamResampler.h  NoiseGateProcessor.cpp  NoiseGateProcessor.h  OverdriveProcessor.cpp  OverdriveProcessor.h  ReverbProcessor.cpp  ReverbProcessor.h  ToneStackProcessor.cpp  (+3 more)
src/ipc/: Bridges.cpp  Bridges.h  IPCServer.cpp  IPCServer.h  MessageHandler.cpp  MessageHandler.h  MetronomeBridge.cpp  MetronomeBridge.h  TunerBridge.cpp  TunerBridge.h  Types.h
src/midi/: MidiController.cpp  MidiController.h
src/plugin/: PluginProcessor.cpp  PluginProcessor.h
src/preset/: ChannelStore.cpp  ChannelStore.h  IrLibrary.cpp  IrLibrary.h  NamLibrary.cpp  NamLibrary.h  PresetManager.cpp  PresetManager.h  SceneManager.cpp  SceneManager.h
src/ui/: EffectCardComponent.cpp  EffectCardComponent.h  EffectCardContainerComponent.cpp  EffectCardContainerComponent.h  FootswitchComponent.cpp  FootswitchComponent.h  KnobComponent.cpp  KnobComponent.h  KnobLookAndFeelComponent.cpp  KnobLookAndFeelComponent.h  LevelMeterComponent.cpp  LevelMeterComponent.h  MeterRowComponent.cpp  MeterRowComponent.h  MonitorRowComponent.cpp  MonitorRowComponent.h  PresetManagerUIComponent.cpp  PresetManagerUIComponent.h  WebServer.cpp  WebServer.h
tests/: ChannelTests.cpp  DriveVoicingTests.cpp  DspTests.cpp  InputTrimTests.cpp  IrTests.cpp  LooperTests.cpp  MidiTests.cpp  ModulationTests.cpp  NamTests.cpp  PerformanceTests.cpp  RegistryTests.cpp  SceneTests.cpp  TunerTests.cpp  UndoTests.cpp  UnitTests.cpp  UpdateTests.cpp  smoke-asio.ps1  smoke.ps1
(+101 files in other folders)
